2008-07-14  Johan Dahlin  <johan@gnome.org>

	* codegen/argtypes.py: 
	Map GSeekType to an int
	
	* gio/gfileinfo.override:
	* gio/ginputstream.override:
	* gio/goutputstream.override:
	Add comments for missing API

2008-07-14  Johan Dahlin  <johan@gnome.org>

	* gio/Makefile.am:
	* gio/gfile.override:
	* gio/ginputstream.override:
	* gio/gio.override:
	* gio/goutputstream.override:
	* gio/pygio-utils.c (pygio_check_cancellable):
	* gio/pygio-utils.h:
	Refactor cancellable check to a utility function, avoids
	plenty of code duplication.

2008-07-14  Paul Pogonyshev  <pogonyshev@gmx.net>

	* codegen/definitions.py (ReturnType): New class.
	(MethodDefBase.__init__): Make 'self.ret' a 'ReturnType' instance,
	not string.  Accept 'optional' flag.

	* codegen/argtypes.py (ArgMatcher.get_reverse_ret): Test if
	'ptype' has true 'optional' attribute and copy it to 'props' then.

	* codegen/reversewrapper.py (ReturnType.support_optional): New
	class field, False by default.
	(GObjectReturn.support_optional, GObjectReturn.write_decl)
	(GObjectReturn.write_conversion): Support optional return.

	* pygobject-2.0.pc.in: Add 'codegendir' variable.
	* codegen/pygtk-codegen-2.0.in: Make 'codegendir' refer to
	PyGObject's codegen, not PyGTK's one --- the latter will be
	removed (first part of bug #542821).

2008-07-08  Murray Cumming  <murrayc@murrayc.com>

	* codegen/h2def.py: clean_func(): Strip GSEAL out, to avoid us
	thinking that there are many functions called GSEAL (merge from
	PyGTK).

2008-01-29  Olivier Crete  <tester@tester.ca>

	* codegen/h2def.py (DefsWriter.__init__): Fix copy-paste
	typos (merge from PyGTK).

2008-07-11  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: wrap File.load_contents, fix a typo.

	* gio/gio.defs: Add docstring for File.load_contents.

	* tests/test_gio.py: Add a test for the above method.

2008-07-09  Juha Sahakangas  <voas0113@saunalahti.fi>

	* gobject/gobjectmodule.c (pyg_io_add_watch): Fix error message